# bibtex-formatter

./: .gitignore  README.md  bibtex_formatter.py  clean_bib.py  config.json  pyproject.toml  test_reference.bib  test_reference_clean.bib  test_reference_formatted.bib
scripts/: generate_extension_icons.swift
